@@ -1364,7 +1364,7 @@
                 <font>-</font>
                 <texturenofocus>scroll-down-2.png</texturenofocus>
                 <texturefocus>scroll-down-focus-2.png</texturefocus>
-                <onup>310</onup>
+                <onup>312</onup>
                 <ondown>308</ondown>
                 <onleft>9000</onleft>
                 <onright>307</onright>
@@ -1387,7 +1387,7 @@
                 <onclick>Skin.SetString(MYITEMCOLOR,$INFO[Container(9005).ListItem.Label])</onclick>
                 <onleft>306</onleft>
                 <onright>9000</onright>
-                <onup>310</onup>
+                <onup>312</onup>
                 <ondown>308</ondown>
                 <onclick condition="!Skin.HasSetting(MenuColorWhite) + !Skin.HasSetting(MenuColorBlue)">Skin.SetBool(MenuColorBlue)</onclick>
                 <onclick condition="Skin.HasSetting(MenuColorBlue)">Skin.SetBool(MenuColorWhite)</onclick>
@@ -1773,8 +1773,55 @@
               <label>Choose Car for PDC Background</label>
               <label2_off>$INFO[Skin.String(PDC_CAR)]</label2_off>
               <onup>309</onup>
-              <ondown>306</ondown>
+              <ondown>311</ondown>
               <onclick>Skin.SetImage(PDC_CAR,,/home/osmc/.kodi/addons/skin.confluence-vertical/media/pdc/BGs)</onclick>
+              <onleft>9000</onleft>
+              <onright>62</onright>
+              <texturefocus>MenuItemFO.png</texturefocus>
+              <texturenofocus>MenuItemNF.png</texturenofocus>
+            </control>
+          </control>
+          <control type="group">
+            <posx>0</posx>
+            <posy>5</posy>
+            <height>135</height>
+            <control type="label" id="208">
+              <posx>0</posx>
+              <posy>0</posy>
+              <width>750</width>
+              <height>45</height>
+              <font>font13_title</font>
+              <label>WIFI Tethering</label>
+              <textcolor>blue</textcolor>
+              <shadowcolor>black</shadowcolor>
+              <align>left</align>
+              <aligny>center</aligny>
+            </control>
+            <control type="button" id="311">
+              <posx>0</posx>
+              <posy>45</posy>
+              <description>aktivate tethering</description>
+              <width>750</width>
+              <height>40</height>
+              <label>Turn ON</label>
+              <onup>310</onup>
+              <ondown>312</ondown>
+              <onclick>RunScript("special://skin/scripts/tether_wifi_on.py")</onclick>
+              <onleft>9000</onleft>
+              <onright>62</onright>
+              <texturefocus>MenuItemFO.png</texturefocus>
+              <texturenofocus>MenuItemNF.png</texturenofocus>
+            </control>
+            <control type="button" id="312">
+              <posx>0</posx>
+              <posy>83</posy>
+              <description>deaktivate tethering</description>
+              <width>750</width>
+              <height>40</height>
+              <label>Turn OFF</label>
+              <onup>311</onup>
+              <ondown>306</ondown>
+              <onclick>RunScript("special://skin/scripts/tether_wifi_off.py")</onclick>
               <onleft>9000</onleft>
               <onright>62</onright>
               <texturefocus>MenuItemFO.png</texturefocus>
